// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingTest / Ping Clicking button changes state 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
  <p>
    foo bar
  </p>
  <p>
    foo bar
  </p>
</div>
`;

exports[`PingTest / Ping Clicking button with no props changes nothing 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;

exports[`PingTest / Ping Matches previous setup 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;
